<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- 顶部统计信息 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/primary"
        android:elevation="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Current_balance"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_marginBottom="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <TextView
                android:id="@+id/balance_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="¥0.00"
                android:textSize="36sp"
                android:textColor="@android:color/white"
                android:fontFamily="sans-serif-medium"
                android:layout_marginBottom="16dp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/income"
                    android:textSize="14sp"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:id="@+id/income_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="¥0.00"
                    android:textSize="18sp"
                    android:textColor="@android:color/white"
                    android:fontFamily="sans-serif-medium"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Expenditure"
                    android:textSize="14sp"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:id="@+id/expense_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="¥0.00"
                    android:textSize="18sp"
                    android:textColor="@android:color/white"
                    android:fontFamily="sans-serif-medium"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!-- 搜索和筛选栏 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:background="@android:color/white"
        android:elevation="2dp">

        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:hint="@string/Searching"
            android:padding="8dp"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/Searching"
            android:padding="0dp"
            android:src="@drawable/select" />
    </LinearLayout>

    <!-- 交易记录列表 -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/transactions_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp" />


    <!-- Fragment容器 -->
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:visibility="gone" />

    <!-- 交易记录输入栏 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_marginTop="1dp"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/amount_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:hint="@string/Amount"
                android:inputType="numberDecimal"
                android:padding="12dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/note_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/Remarks"
                android:padding="12dp"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/income_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@color/income"
                android:fontFamily="sans-serif-medium"
                android:padding="12dp"
                android:text="@string/income"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/expense_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/expense"
                android:fontFamily="sans-serif-medium"
                android:padding="12dp"
                android:text="@string/Expenditure"
                android:textColor="@color/background"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
